# stock-prediction-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  STOCK_API_MASTER_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml  run-disposable-live-gate.ps1  run-forecast-demo.ps1  run-live-gate.ps1  run-vendor-acquisition.ps1  run-vendor-backfill.ps1  run-vendor-smoke.ps1
.github/workflows/: cd.yml  ci.yml
ai_dispatcher/: AUTHORIZATIONS.md  README.md  __init__.py  __main__.py  authorizations.json  cli.py  config.py  dispatch.tasks.md  loop.py  packets.py  publish.py  scope_guard.py  sentinels.py  subprocess_utils.py  tasks.py  verify.py
ai_dispatcher/agents/: __init__.py  base.py  claude_agent.py  codex_agent.py
ai_dispatcher/schemas/: codex_control.schema.json  codex_plan.schema.json
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: router.py
app/api/v1/: backtest.py  forecast.py  fundamentals.py  health.py  indicators.py  news.py  prices.py  signals.py
app/core/: etag.py  exceptions.py  logging.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  adjustment_factors.py  bars.py  corporate_actions.py  forecast_calibration.py  forecast_evidence.py  forecast_snapshots.py  fundamentals.py  news.py  predictions.py  vendor_acquisition.py
app/observability/: metrics.py  sentry.py
app/schemas/: common.py  forecast.py  fundamentals.py  indicators.py  prices.py
app/services/: adjusted_forecast_snapshot_builder.py  adjusted_price_store.py  adjusted_prices.py  adjustment_factor_builder.py  adjustment_factor_store.py  adjustment_factors.py  analysis.py  backtesting.py  corporate_action_store.py  corporate_actions.py  forecast_calibration_evidence.py  forecast_calibration_evidence_store.py  forecast_calibration_release_store.py  forecast_calibration_releases.py  forecast_calibration_sets.py  forecast_cohort_store.py  forecast_cohorts.py  forecast_outcome_collection.py  forecast_outcome_policy_store.py  forecast_outcome_resolution.py  forecast_outcome_store.py  forecast_outcomes.py  forecast_run_store.py  forecast_runs.py  forecast_selection_policies.py  forecast_selection_policy_store.py  forecast_serving.py  forecast_snapshot_builder.py  forecast_snapshots.py  forecasting.py  indicators.py  market_calendar.py  prices.py  scheduled_evaluation.py  vendor_acquisition_campaign_store.py
config/: settings.example.yaml
data_sources/: alpaca.py  base.py  databento.py  finnhub.py  fmp.py  guards.py  polygon.py  polygon_open_close.py  sharadar.py
docs/: architecture.md  dispatch_smoke.md  step6_smoke.md
docs/ci-cd-templates/: README.md  cd.yml.example  ci.yml.example
feature_store/: feature_store.yaml
ingestion/: automation.py  celery_app.py  locks.py  snapshot_celery_app.py  upsert.py
ingestion/flows/: ingest_fundamentals.py  ingest_news.py  ingest_prices.py
ingestion/tasks/: build_forecast_snapshots.py  ingest_forecast_closes.py  ingest_fundamentals.py  ingest_news.py  ingest_prices.py  seal_adjusted_forecast_snapshot.py  seal_forecast_demo_snapshot.py  transforms.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_bars.py  0003_bars_series_index.py  0004_bars_finiteness.py  0005_forecast_input_snapshots.py  0006_bar_version_history.py  0007_snapshot_builder_privileges.py  0008_bar_version_availability.py  0009_forecast_runs.py  0010_forecast_evidence.py  0011_outcome_policy_fence.py  0012_corporate_action_collections.py  0013_adjustment_factors.py  0014_vendor_acquisition_campaign_anchor.py  0015_forecast_calibration_evidence.py  0016_selection_policy_fence.py
ml/backtesting/: engine.py
ml/calibration/: __init__.py  conformal.py
ml/evaluation/: __init__.py  metrics.py  walk_forward.py
ml/features/: pipeline.py  technical.py
ml/models/: __init__.py  base.py  baselines.py  chronos_model.py  gboost_model.py  nixtla_model.py
ml/training/: train.py
scripts/: README.md  __init__.py  adjusted_forecast_demo.py  adjusted_forecast_plan.py  ci-live-database-gate.sh  forecast_demo.py  vendor_acquisition.py  vendor_backfill.py  vendor_smoke.py
scripts/db-init/: 01-extensions.sql  02-runtime-role.sh
tests/: conftest.py
tests/integration/: test_bars_live_gate.py  test_rate_limit_redis_live.py
tests/unit/: test_adjusted_forecast_demo.py  test_adjusted_forecast_plan.py  test_adjusted_forecast_routing.py  test_adjusted_forecast_snapshot_builder.py  test_adjusted_price_store.py  test_adjusted_prices.py  test_adjusted_prices_api.py  test_adjustment_factor_builder.py  test_adjustment_factor_models.py  test_adjustment_factor_store.py  test_adjustment_factors.py  test_ai_dispatcher_codex_agent.py  test_ai_dispatcher_loop.py  test_ai_dispatcher_markers.py  test_ai_dispatcher_packets.py  test_ai_dispatcher_publish.py  test_ai_dispatcher_scope_guard.py  test_ai_dispatcher_sentinels.py  test_ai_dispatcher_subprocess.py  test_ai_dispatcher_tasks.py  test_ai_dispatcher_verify.py  test_app_wiring.py  test_auth.py  test_automation_guard.py  test_bar_db_sink.py  test_bar_models.py  test_bar_upsert.py  test_baseline_forecasters.py  test_build_forecast_snapshots_task.py  test_celery_config.py  test_ci_live_database_gate.py  test_conformal_calibration.py  test_corporate_action_models.py  test_corporate_action_store.py  test_corporate_actions.py  test_cost_rate_guard.py  test_disposable_live_gate_wrapper.py  test_forecast_api.py  test_forecast_calibration_evidence.py  test_forecast_calibration_evidence_model.py  (+45 more)
