[project]
name = "stock-prediction-api"
version = "0.1.0"
description = "Stock market analysis & probabilistic price-prediction API"
requires-python = ">=3.12,<3.13"
dependencies = [
  # --- API & web ---
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "gunicorn>=23.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.28",
  "slowapi>=0.1.9",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-dotenv>=1.0",
  # --- data layer ---
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "redis>=5.2",
  # --- analytics core ---
  "pandas>=2.2",
  "numpy>=1.26",
  "pandas-ta>=0.3.14b",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  # --- orchestration / tracking clients ---
  "prefect>=3.1",
  "mlflow>=2.19",
  # --- observability ---
  "prometheus-client>=0.21",
  "sentry-sdk>=2.19",
  "structlog>=24.4",
  # --- vendor SDKs ---
  "polygon-api-client>=1.14",
  "finnhub-python>=2.4",
]

[project.optional-dependencies]
ml = [
  "torch>=2.5",
  "xgboost>=2.1",
  "lightgbm>=4.5",
  "catboost>=1.2",
  "statsforecast>=2.0",
  "neuralforecast>=2.0",
  "darts>=0.31",
  "chronos-forecasting>=1.5",
  "pmdarima>=2.0",
  "vectorbt>=0.27",
  "backtrader>=1.9",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "ipython>=8.30",
]

[tool.uv]
package = false
