[project]
name = "stock-prediction-api"
version = "0.1.0"
description = "Stock market analysis & probabilistic price-prediction API"
requires-python = ">=3.12,<3.13"
dependencies = [
  # --- API & web ---
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "gunicorn>=23.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.28",
  "tenacity>=9.0",
  "slowapi>=0.1.9",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-dotenv>=1.0",
  # --- data layer ---
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "redis>=5.2",
  # --- orchestration (task queue + scheduler) ---
  "celery[redis]>=5.4",
  # --- analytics core ---
  "pandas>=2.2",
  "numpy>=1.26",
  "pandas-ta>=0.3.14b",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  # --- tracking client ---
  "mlflow>=2.19",
  # --- observability ---
  "prometheus-client>=0.21",
  "sentry-sdk>=2.19",
  "structlog>=24.4",
  # --- vendor SDKs ---
  "polygon-api-client>=1.14",
  "finnhub-python>=2.4",
]

[project.optional-dependencies]
ml = [
  "torch>=2.5",
  "xgboost>=2.1",
  "lightgbm>=4.5",
  "catboost>=1.2",
  "statsforecast>=2.0",
  "neuralforecast>=2.0",
  "darts>=0.31",
  "chronos-forecasting>=1.5",
  "pmdarima>=2.0",
  "vectorbt>=0.27",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "ipython>=8.30",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "data_sources", "ingestion", "ml", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables in argument defaults by design (Depends/Header/...).
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Header",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
  "fastapi.Security",
  "fastapi.Cookie",
  "fastapi.Form",
  "fastapi.File",
]

[tool.ruff.lint.isort]
known-first-party = ["app", "data_sources", "ingestion", "ml", "tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
files = ["app", "data_sources", "ingestion", "ml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
